--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,9 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
-    "angular-route": "~1.3.13"
+    "angular-route": "~1.3.13",
+    "d3-tip": "~0.6.6",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
